--- a/app/assets/stylesheets/events.css
+++ b/app/assets/stylesheets/events.css
@@ -10,14 +10,15 @@ div#export_button_container{
 	padding: 0;
 }
 div#export_button_container div#left{
-	width: 50%; 
+	width: 65%; 
 	float: left; 
 }
 div#export_button_container div#right{
-	width: 40%; 
+	width: 30%; 
 	float: right; 
 	text-align: right; 
 	padding-right: 10px;
+	border: solid thin #f00;
 }
 
 
@@ -67,9 +68,9 @@ display: none;
 #time-container {	
 	margin-top: 15px;
 }
-#time-container #time-block {float: left; width: 50%;}
+#time-container #time-block {float: left; width: 65%;}
 #time-container #time-block #event_time {font-size: larger;}
-#time-container #button-block {float: right; width: 40%; text-align: right; padding-right: 10px;}
+#time-container #button-block {float: right; width: 30%; text-align: right; padding-right: 10px;}
 
 /* image caption styles */
 div#event_picture_container {
