--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
         <div class="c1 def-font">
           <a href="<%= "/#{params[:locale]}" %>" class="clear" />
             <img src="/assets/images/logo-german-week.png" />
-            <div class="logo-text def-font upcase">
+            <div class="logo-text def-font">
 							<%= "#{t('.logo_text')}" %>
 							<br />
 							<%= "14.-20. #{t('date.abbr_month_names').to_a[5]} 2012" %>
