--- a/app/assets/stylesheets/application.new.css
+++ b/app/assets/stylesheets/application.new.css
@@ -78,12 +78,13 @@ img {
         color: white;
       }
 
-      @font-face
-      {
-        font-family: "Times New Roman";
-        font-style: normal;
-        font-weight: 400;
-      }
+       @font-face
+       {
+         font-family: fightme;
+         font-style: normal;
+         font-weight: 400;
+         src: url(fonts/bpg_mrgvlovani_caps_2010.ttf);
+       }
 
       #container
       {
@@ -284,13 +285,16 @@ img {
 
       #slider .container .loader
       {
-        background: rgba(0, 0, 0, 1);
+        background-image: url(images/loader.gif);
+        background-color: rgba(0, 0, 0, .7);
+        background-position: center 93px;
+        background-repeat: no-repeat;
         color: white;
         text-align: center;
         margin: 0 auto;
         width: 100%;
         height: 100%;
-        padding-top: 120px;
+        padding-top: 73px;
       }
 
       #slider .container .loader > div
@@ -305,19 +309,11 @@ img {
 
       #slider .container img
       {
-        float: left;
         position: absolute;
         top: 0px;
-      }
-
-      #slider .container slider_img_0
-      {
-      }
-      #slider .container slider_img_1
-      {
-      }
-      #slider .container slider_img_2
-      {
+        left: 0px;
+        z-index: 190;
+        display: none;
       }
 
       #slider .overlay
