got pdf downloads working! made updates to event views and controller actions for pdf download; removed partial event files - no longer need

--- a/app/assets/stylesheets/application.new.css
+++ b/app/assets/stylesheets/application.new.css
@@ -725,12 +725,13 @@ label.error { display: block; margin: 0 !important; }
 		display: none;
 	}
 
-  #content
+  #content, #content-board
   {
     top: 0;
     margin: 0;
     padding: 10px;
     padding-bottom: 0px;
+    width: 100%;
   }
 
 }
