--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,15 +1,15 @@
-<% title t('.title') %>
+<% title t('events.index.title') %>
 
 <% if !@events.nil? && @events.length > 0 %>
 	<div id="export_button_container">
 		<div id="right">
-			<%= link_to(image_tag("images/PDF.png", :alt => t('app.buttons.pdf_all')), events_path(:format => 'pdf'), :class => "btn-export-hide", :target => "_blank", :title => t('app.buttons.pdf_all')) %>
-			<%= link_to(image_tag("images/Print.png", :alt => t('app.buttons.print_all')), "", :id => "btn-print", :class => "btn-export", :title => t('app.buttons.print_all')) %>
+			<%= link_to(image_tag("images/PDF.png", :alt => t('app.buttons.pdf_all')), events_path(:format => 'pdf'), :class => "btn-export", :title => t('app.buttons.pdf_all')) %>
+			<%= link_to(image_tag("images/Print.png", :alt => t('app.buttons.print_all')), "#", :id => "btn-print", :class => "btn-export", :title => t('app.buttons.print_all')) %>
 		</div>
 		<div class="clear"></div>
 	</div>
 <% end %>
 
-<%= render 'shared/event_list', :html => true %>
+<%= render 'shared/event_list.html' %>
 
 
