--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
 
             <div id="search_button_and_form">
               <div id="search_form_container">
-                <%= render 'german_week/search_form' %>
+                <%= render 'german_week/search_form.html.erb' %>
               </div>
               <div id="search_show_button">
                 <img src="/assets/images/search.png" />
