--- a/app/views/shared/_event_list.html.erb
+++ b/app/views/shared/_event_list.html.erb
@@ -28,14 +28,16 @@
 						<%= event.event_address %>
 					<% end %>
         </div>
-				<div>
-					<%= link_to(image_tag("images/Calendar.png", :alt => t('app.buttons.ics')), events_exportICS_path(:type => "event", :typespec => event.id), :class => "btn-export", :title => t('app.buttons.ics')) %>
+				<% if is_html %>
+					<div>
+						<%= link_to(image_tag("images/Calendar.png", :alt => t('app.buttons.ics')), events_exportICS_path(:type => "event", :typespec => event.id), :class => "btn-export", :title => t('app.buttons.ics')) %>
 					
-				<% if user_signed_in? %>
-				        <%= link_to t('app.buttons.edit'), edit_event_path(event), :class => 'btn btn-mini' %>
-				        <%= link_to t('app.buttons.delete'), event_path(event), :method => :delete, :confirm => t('app.msgs.delete_confirm'), :class => 'btn btn-mini btn-danger' %>
+					<% if user_signed_in? %>
+						      <%= link_to t('app.buttons.edit'), edit_event_path(event), :class => 'btn btn-mini' %>
+						      <%= link_to t('app.buttons.delete'), event_path(event), :method => :delete, :confirm => t('app.msgs.delete_confirm'), :class => 'btn btn-mini btn-danger' %>
+					<% end %>
+					</div>
 				<% end %>
-				</div>
       </td>
 
    <% if i % 2 == 1 %>
