trying to get settings right so pdfkit works on heroku

--- a/app/assets/stylesheets/application.new.css
+++ b/app/assets/stylesheets/application.new.css
@@ -533,6 +533,13 @@ img {
         background: rgba(0, 0, 0, .27);
       }
 
+      #footer a:hover
+      {
+        text-decoration: underline;
+				font-weight: bold;
+				background-color: transparent !important;
+      }
+
       #footer .r1 > div
       {
         float: left;
