completed both of sliders. don't have time to test on bugs though

--- a/app/assets/stylesheets/va_slider.css
+++ b/app/assets/stylesheets/va_slider.css
@@ -24,6 +24,12 @@
     cursor: pointer;
 }
 
+#partners .switcher_button
+{
+    background-color: rgba(0, 0, 0, .05);
+    width: 50px;
+}
+
 .switcher_button:hover
 {
     opacity: 1;
