--- a/app/assets/stylesheets/application.new.css
+++ b/app/assets/stylesheets/application.new.css
@@ -290,14 +290,13 @@ img {
       {
         background-image: url(images/loader.gif);
         background-color: rgba(0, 0, 0, .7);
-        background-position: center 93px;
+        background-position: center center;
         background-repeat: no-repeat;
         color: white;
         text-align: center;
         margin: 0 auto;
         width: 100%;
         height: 100%;
-        padding-top: 73px;
       }
 
       .slider .container > .slide, .slider .container .group
@@ -313,8 +312,13 @@ img {
 
       .slider .container .group
       {
-        top: 34px;
-        width: auto;
+        text-align: center;
+      }
+      
+      .slider .container > .group > .inner-cont
+      {
+        margin: 33px auto;
+        display: inline-block;
       }
 
       .slider .container .group .slide
