created image_header obj to manage image headers from web page; updated js code to load image headers from s3

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,7 +2,7 @@
 
 <% if user_signed_in? %>
 	<div class="form-actions">
-		<%= link_to t('.app.buttons.new_page'), new_page_path, :class => 'btn btn-mini' %>
+		<%= link_to t('app.buttons.new_page'), new_page_path, :class => 'btn btn-mini' %>
 	</div>
 <% end %>
 
