--- a/app/views/sponsors/index.html.erb
+++ b/app/views/sponsors/index.html.erb
@@ -2,7 +2,7 @@
 
 <% if user_signed_in? %>
 	<div class="form-actions">
-		<%= link_to t('.app.buttons.new_sponsor'), new_sponsor_path, :class => 'btn btn-mini' %>
+		<%= link_to t('app.buttons.new_sponsor'), new_sponsor_path, :class => 'btn btn-mini' %>
 	</div>
 <% end %>
 
