--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -156,6 +156,7 @@
 									<%= link_to t('.categories'), categories_path, :class => "item" %>
 									<%= link_to t('.sponsors'), sponsors_path, :class => "item" %>
 									<%= link_to t('.pages'), pages_path, :class => "item" %>
+									<%= link_to t('.image_headers'), image_headers_path, :class => "item" %>
 									<%= link_to t('.sign_out'), destroy_user_session_path, :method => :delete, :class => "item" %>  
 								<% else %>  
 									<%= link_to t('.sign_in'), new_user_session_path, :class => "item" %>  
@@ -166,10 +167,10 @@
 
           <div class="c4">
 						<!-- facebook -->
-<div class="fb-like" data-href="http://www.deutschewoche.ge/" data-send="false" data-layout="button_count" data-width="150" data-show-faces="false"></div>
-
 <div class="fb-subscribe" data-href="http://www.facebook.com/DeutscheBotschaftTiflis" data-layout="button_count" data-show-faces="true" data-width="150"></div>
 						
+<div class="fb-like" data-href="http://www.deutschewoche.ge/" data-send="false" data-layout="button_count" data-width="150" data-show-faces="false"></div>
+
 						<!-- twitter -->
 						<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://deutschewoche.ge/" data-text="Check out Deutsche Woche in Georgia">Tweet</a>
 
