--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -114,7 +114,7 @@
 
       <div id="partners" class="clear">
 
-        <div class="container slider def-width">
+        <div class="container slider">
         </div>
 
       </div><!--#partners-->
