--- a/app/assets/stylesheets/application.new.css
+++ b/app/assets/stylesheets/application.new.css
@@ -152,7 +152,7 @@ img {
       {
         color: #2f2f2f;
         font-weight: bold;
-        font-size: 12px;
+        font-size: 13px;
         width: 130px;
         display: block;
         text-align: left;
@@ -211,7 +211,7 @@ img {
 
       #languages
       {
-        font-size: 11px;
+        font-size: 12px;
         display: inline-block;
       }
 
@@ -239,7 +239,7 @@ img {
 
       #header .menu
       {
-        font-size: 14px;
+        font-size: 15px;
         font-weight: bold;
         margin-top: 18px;
       }
@@ -278,6 +278,7 @@ img {
 
       #partners .slider .container
       {
+        width: 900px;
         background: #fff;
       }
 
@@ -289,7 +290,7 @@ img {
       .slider .container .loader
       {
         background-image: url(images/loader.gif);
-        background-color: rgba(0, 0, 0, .7);
+        background-color: transparent;
         background-position: center center;
         background-repeat: no-repeat;
         color: white;
@@ -307,7 +308,6 @@ img {
         z-index: 190;
         display: none;
         width: 100%;
-        height: 100%;
       }
 
       .slider .container .group
@@ -317,7 +317,7 @@ img {
       
       .slider .container > .group > .inner-cont
       {
-        margin: 33px auto;
+        margin: 0 auto;
         display: inline-block;
       }
 
@@ -335,6 +335,7 @@ img {
 
       .slider .overlay
       {
+        display: none;
         position: absolute;
         z-index: 200;
         top: 0px;
@@ -412,7 +413,7 @@ img {
       {
         margin-top: 3px;
         display: block;
-        font-size: 10px;
+        font-size: 11px;
         font-weight: bold;
         color: #3F3F3F;
         background: #f4f4f4;
@@ -479,7 +480,7 @@ img {
       {
         color: #4C4C4C;
         font-family: Arial, Sans-serif;
-        font-size: 12px;
+        font-size: 13px;
         padding: 12px 13px 8px 1px;
       }
 
@@ -503,7 +504,7 @@ img {
       #content-board > table td div.header
       {
         color: #8C8C8C;
-        font-size: 12px;
+        font-size: 13px;
         font-style: italic;
         margin-bottom: 9px;
       }
@@ -516,8 +517,10 @@ img {
 
       #partners
       {
-        width: 100%;
-        background: rgba(0, 0, 0, .06);
+        width: 900px;
+        padding: 10px;
+        margin: 0 auto;
+        background: rgba(255, 255, 255, .4);
       }
 
       #footer
@@ -558,7 +561,7 @@ img {
       {
         margin-top: 35px;
         font-weight: bold;
-        font-size: 14px;
+        font-size: 15px;
       }
 
       #footer .r1 .c3 .r2 > div
@@ -575,21 +578,21 @@ img {
       {
         border: 0 none;
         padding: 9px 11px;
-        font-size: 14px;
+        font-size: 15px;
         font-weight: bold;
         color: #494949;
       }
 
       #footer .menu
       {
-        font-size: 12px;
+        font-size: 13px;
         width: 100%;
       }
 
       #footer .menu > .header
       {
         font-weight: bold;
-        font-size: 14px;
+        font-size: 15px;
       }
 
       #footer .menu > .header, #footer .menu > .item
@@ -627,7 +630,7 @@ img {
       #footer > .r3
       {
         color: #fff;
-        font-size: 12px;
+        font-size: 13px;
         font-family: Arial, Sans-serif;
         text-shadow: 1px 1px rgba(0, 0, 0, .2);
         padding: 9px 0px 10px;
@@ -636,7 +639,7 @@ img {
       #footer .r3 a
       {
         color: #fff;
-        font-size: 12px;
+        font-size: 13px;
         text-decoration: none;
       }
 
