--- a/app/assets/stylesheets/application.new.css
+++ b/app/assets/stylesheets/application.new.css
@@ -529,13 +529,6 @@ img {
         background: rgba(0, 0, 0, .27);
       }
 
-      #footer a:hover
-      {
-        text-decoration: underline;
-				font-weight: bold;
-				background-color: transparent !important;
-      }
-
       #footer .r1 > div
       {
         float: left;
@@ -612,7 +605,9 @@ img {
       {
         color: #202020;
         cursor: pointer;
-				background-color: #fff;
+        text-decoration: underline;
+				font-weight: bold;
+				background-color: transparent;
       }
 
       #footer .menu > .item:last-child
