--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,19 +1,19 @@
 body {
   background-color: #fff;
   color: #333;
-  font-family: "Times New Roman";
-  font-size: 13px;
+  font-family: Arial, Sans-serif;
+  font-size: 14px;
   line-height: 18px; }
 
 p, ol, ul, td {
-  font-family: "Times New Roman";
-  font-size: 13px;
+  font-family: Arial, Sans-serif;
+  font-size: 14px;
   line-height: 18px; }
 
 pre {
   background-color: #eee;
   padding: 10px;
-  font-size: 11px; }
+  font-size: 12px; }
 
 /*
 a {
@@ -47,11 +47,11 @@ div {
     text-align: left;
     font-weight: bold;
     padding: 5px 5px 5px 15px;
-    font-size: 12px;
+    font-size: 13px;
     margin: -7px;
     margin-bottom: 0px;
     background-color: #c00;
     color: #fff; }
   ul li {
-    font-size: 12px;
+    font-size: 13px;
     list-style: square; } }
