--- a/app/assets/stylesheets/scaffold.css
+++ b/app/assets/stylesheets/scaffold.css
@@ -1,8 +1,8 @@
 body { background-color: #fff; color: #333; }
 
 body, p, ol, ul, td {
-  font-family: "Times New Roman";
-  font-size:   13px;
+  font-family: Arial, Sans-serif;
+  font-size:   14px;
   line-height: 18px;
 }
 
