--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -67,9 +67,9 @@
 <div id="sponsor_container">
 	<% @event.sponsors.each do |s| %>
 		<% if !s.logo_file_name.nil? %>
-			<%= link_to(image_tag(s.logo.url), sponsor_path(s), :title => s.title) %>
+			<div><%= link_to(image_tag(s.logo.url), sponsor_path(s), :title => s.title) %></div>
 		<% else %>
-			<%= link_to(s.title, sponsor_path(s)) %>
+			<div><%= link_to(s.title, sponsor_path(s)) %></div>
 		<% end %>
 	<% end %>
 	<div class="clear"></div>
