--- a/app/assets/stylesheets/application.new.css
+++ b/app/assets/stylesheets/application.new.css
@@ -181,27 +181,63 @@ img {
         text-align: right;
       }
 
+      #header > .c3 > .top-row
+      {
+        width: 245px;
+      }
+
       #search_button_and_form
       {
-        display: inline-block;
+      }
+
+      #search_button_and_form form
+      {
+        margin: 0px !important;
       }
 
       #search_show_button
       {
-      	float: right;      	
+      	float: right;
         cursor: pointer;
         width: 20px;
+        margin: 3px 0px 0px 15px;
       }
 
       #search_form_container
       {
-        display: none;
+        width: 210px;
+        overflow: hidden;
+        position: relative;
+        height: 37px;
+        float: left;
+        background: transparent;
+      }
+
+      #search_form_container .container
+      {
+        position: absolute;
+        left: 0;
+        width: 210px;
+        margin-left: 210px;
+        height: 37px;
+        float: left;
         background: transparent;
       }
       
-      #search 
+      #search_form_container input
+      {
+      	margin-bottom: 5px !important;
+      }
+      
+      #search_form_container input[type="text"]
       {
       	width: 150px;
+      	float: left;
+      }
+      
+      #search_form_container input[type="submit"]
+      {
+      	float: right;
       }
       
       #category 
@@ -241,7 +277,7 @@ img {
       {
         font-size: 15px;
         font-weight: bold;
-        margin-top: 18px;
+        margin-top: 0px;
       }
 
       #header .menu > .item
@@ -291,13 +327,23 @@ img {
       {
         background-image: url(images/loader.gif);
         background-color: transparent;
-        background-position: center center;
+        background-position: center 40%;
         background-repeat: no-repeat;
-        color: white;
+        color: #747474;
         text-align: center;
         margin: 0 auto;
         width: 100%;
         height: 100%;
+      }
+
+      .slider .container .loader div
+      {
+        padding-top: 48px;
+      }
+
+      #partners .slider .container .loader div
+      {
+        padding-top: 3px;
       }
 
       .slider .container > .slide, .slider .container .group
