--- a/app/assets/stylesheets/application.new.css
+++ b/app/assets/stylesheets/application.new.css
@@ -766,7 +766,7 @@ label.error { display: block; margin: 0 !important; }
 
 /* styles for printing */
 @media print {
-	#header .c3, #s1, .menu, #partners, #footer, div#export_button_container div#right, #time-container #button-block {
+	#header .c3, #s1, .menu, #partners, #footer, div#export_button_container div#right, #time-container #button-block, .form-actions {
 		display: none;
 	}
 
@@ -775,13 +775,12 @@ label.error { display: block; margin: 0 !important; }
     top: 0;
     margin: 0;
     padding: 10px;
-    padding-bottom: 0px;
     width: 100%;
   }
 
 	div#map_container_show {
 		margin: 0 auto;
-		page-break-before: always;
+/*		page-break-before: always;*/
 		visibility: visible !important;
 	}
 }
