added favicon from germ embassy site

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="icon" href="/assets/images/favicon.ico">
+    <link rel="shortcut icon" href="/assets/images/favicon2.ico">
     <title>Deutsche Woche 2012 - <%= yield (:title) || "German Week" %></title>
     <%= include_gon %>
     <%= stylesheet_link_tag  "application", :media => "all" %>
