js not rendering for pdf so hiding map

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -75,8 +75,8 @@
 	<div class="clear"></div>
 </div>
 
-<div id="map_container_show">
-	<div id="map"></div>
-</div>
-
-
+<% if is_html %>
+	<div id="map_container_show">
+		<div id="map"></div>
+	</div>
+<% end %>
