removed time delay from pdfkit config

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -72,7 +72,7 @@
 			<div><%= link_to(s.title, sponsor_path(s)) %></div>
 		<% end %>
 	<% end %>
-	<div class="clear"></div>
+	<div class="clear">&nbsp;</div>
 </div>
 
 <% if is_html %>
