--- a/app/views/sponsors/index.html.erb
+++ b/app/views/sponsors/index.html.erb
@@ -20,7 +20,7 @@
 		<% end %>
 	</h3>
 
-	<p>
+	<p class="clear">
 		<% if !sponsor.address.nil? && sponsor.address.length > 0 %>
 		  <%= sponsor.address %>
 			<br />
@@ -38,7 +38,6 @@
 			<% end %>
 		<% end %>
 	</p>
-	<div class="clear"></div>
 <% if user_signed_in? %>
 <p>
       <%= link_to t('app.buttons.edit'), edit_sponsor_path(sponsor), :class => 'btn btn-mini' %>
