fixed link to jumpstart; fixed translation mistake on map page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -188,7 +188,7 @@
             <%= link_to t('.disclaimer'), view_pages_path(:name => "disclaimer") %>
           </div>
           <div class="c3">
-            <a href="#" href="http://jumpstart.ge/" target="_blank"><%= t('.jumpstart_link') %></a>
+            <a href="http://jumpstart.ge/" target="_blank"><%= t('.jumpstart_link') %></a>
           </div>
         </div><!--#footer .r3-->
 
