--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -1,7 +1,7 @@
 	<div class="select-events">
 		<br />
 		<form>
-			<%= t('day.prompts.day') %>
+			<%= t('datetime.prompts.day') %>
 			<select id="event-day">
 				<option></option>
 				<% (1..6).each do |i| %>
