--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="shortcut icon" href="/assets/images/favicon2.ico">
+    <link rel="shortcut icon" href="/assets/images/favicon3.ico">
     <title>Deutsche Woche 2012 - <%= yield (:title) || "German Week" %></title>
     <%= include_gon %>
     <%= stylesheet_link_tag  "application", :media => "all" %>
     <!--[if IE 6]><%= stylesheet_link_tag 'ie6' %><![endif]-->
     <!--[if IE 7]><%= stylesheet_link_tag 'ie7' %><![endif]-->  
     <%= csrf_meta_tags %>
+		<meta property="og:title" content="Deutsche Woche 2012" />
+		<meta property="og:type" content="activity" />
+		<meta property="og:url" content="http://www.deutschewoche.ge" />
+		<meta property="og:image" content="" />
+		<meta property="og:site_name" content="Deutsche Woche 2012" />
   </head>
   <body>
 
@@ -167,7 +172,7 @@
 
           <div class="c4">
 						<!-- facebook -->
-<div class="fb-subscribe" data-href="http://www.facebook.com/DeutscheBotschaftTiflis" data-layout="button_count" data-show-faces="true" data-width="150"></div>
+						<div><%= link_to(image_tag("images/find_fb.jpg", :size => '100x30'), "https://www.facebook.com/DeutscheBotschaftTiflis", :target => "_blank") %></div>
 						
 <div class="fb-like" data-href="http://www.deutschewoche.ge/" data-send="false" data-layout="button_count" data-width="150" data-show-faces="false"></div>
 
@@ -222,5 +227,20 @@
 		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
 		  })();
 		</script>		
+
+<% if Rails.env.production? %>
+	<!-- google analytics -->
+	<script type="text/javascript">
+	var _gaq = _gaq || [];
+		_gaq.push(['_setAccount', 'UA-12801815-6']);
+		_gaq.push(['_trackPageview']);
+	(function() {
+		  var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+		})();
+	</script>
+<% end %>
+
 		</body>
 </html>
