added asset_sync gem

--- a/app/assets/stylesheets/va_slider.css.erb
+++ b/app/assets/stylesheets/va_slider.css.erb
@@ -38,13 +38,13 @@
 .switcher_button[direction="left"]
 {
     left: 0px;
-    background-image: url('slider-left.png');
+    background-image: url(<%= asset_path 'slider-left.png' %>);
 }
 
 .switcher_button[direction="right"]
 {
     right: 0px;
-    background-image: url('slider-right.png');
+    background-image: url(<%= asset_path 'slider-right.png' %>);
 }
 
 .switcher_circles .circle, .switcher_circles .circle_selected
