--- a/app/assets/stylesheets/application.new.css.erb
+++ b/app/assets/stylesheets/application.new.css.erb
@@ -83,7 +83,7 @@ img {
          font-family: fightme;
          font-style: normal;
          font-weight: 400;
-         src: url(fonts/bpg_mrgvlovani_caps_2010.ttf);
+         src: url(<%= asset_path 'fonts/bpg_mrgvlovani_caps_2010.ttf' %>);
        }
 
       .def-font
@@ -101,7 +101,7 @@ img {
       #container
       {
         width: 100%;
-        background: url('bg.jpg');
+        background: url(<%= asset_path 'bg.jpg' %>);
       }
 
       #header
@@ -325,7 +325,7 @@ img {
 
       .slider .container .loader
       {
-        background-image: url(loader.gif);
+        background-image: url(<%= asset_path 'loader.gif' %>);
         background-color: transparent;
         background-position: center 40%;
         background-repeat: no-repeat;
@@ -396,7 +396,7 @@ img {
         z-index: 200;
         top: 0px;
         left: 0px;
-        background: url('slider-overlay.png');
+        background: url(<%= asset_path 'slider-overlay.png' %>);
         width: 100%;
         height: 100%;
       }
