--- a/app/views/german_week/index.html.erb
+++ b/app/views/german_week/index.html.erb
@@ -6,7 +6,7 @@
 <div id="img_ambassador">
 	<%= image_tag "ambassodor.jpg" %>
 </div>
-<div>
+<div class="description">
 	<%= simple_format(@page.description) %>
 </div>
 <div id="img_signature">
