--- a/app/assets/stylesheets/application.new.css.erb
+++ b/app/assets/stylesheets/application.new.css.erb
@@ -153,7 +153,7 @@ td { vertical-align: top !important; }
   color: #2f2f2f;
   font-weight: bold;
   font-size: 13px;
-  width: 130px;
+  width: 175px;
   display: block;
   text-align: left;
   float: left;
@@ -271,7 +271,7 @@ td { vertical-align: top !important; }
 
 #header .menu
 {
-  font-size: 15px;
+  font-size: 14px;
   font-weight: bold;
   margin-top: 0px;
 }
@@ -359,27 +359,37 @@ h3.hidden
 #content .menu .item
 {
   margin-top: 3px;
-  display: block;
-  font-size: 11px;
-  font-weight: bold;
-  color: #3F3F3F;
   background: #f4f4f4;
   cursor: pointer;
-  width: 173px;
-  padding: 8px 0 8px 12px;
+  transition: background .3s;
+  -moz-transition: background .3s;
+  -webkit-transition: background .3s;
+  -o-transition: background .3s;
 }
 
-#content .menu  a:first-child
+#content .menu .item a
+{
+  display: block;
+  padding: 8px 0 8px 12px;
+  color: #3F3F3F;
+  font-size: 12px;
+  width: 173px;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+#content .menu .item:hover
+{
+  background: #fff;
+  text-decoration: none;
+}
+
+#content .menu .item:first-child
 {
   margin-top: 0px !important;
 }
 
-#content .menu  .item:hover
-{
-  background: #fff;
-}
-
-#content .menu  .selected
+#content .menu .selected
 {
   background: #fff;
 }
@@ -393,30 +403,40 @@ h3.hidden
 	margin-left: 10px;
   float: none;
   background: #fff;
-  font-size: 14px !important;
+  font-size: 14px;
 }
 
-#content-board h2{
+#content-board h2
+{
 	margin: 0.5em 0 1em 0;
 	line-height: 100%;
+	font-size: 20px;
+	padding: 0px 10px 0px 5px;
 }
 
 #content-board a
 {
-	text-decoration: underline;
-	color: #000;
+	text-decoration: none;
+	color: #3b5998;
+	opacity: .8;
+  transition: opacity .2s;
+  -moz-transition: opacity .1s;
+  -webkit-transition: opacity .2s;
+  -o-transition: opacity .1s;
 }
 
 #content-board a:hover
 {
-	background-color: #e1e1e1;
+	background: none;
+	color: #3b5998;
+	opacity: 1;
 }
 
 #content-board > table.grid
 {
-  width: 663px;
-  margin-left: 26px;
-  margin-right: 26px;
+  width: 684px;
+  margin-left: 5px;
+  margin-right: 16px;
 }
 
 #content-board > table tr
@@ -435,7 +455,7 @@ h3.hidden
 #content-board > table tr > td.left
 {
   border-right: 1px dotted #B3B3B3;
-  width: 316.5px;
+  width: 337.5px;
 }
 
 #content-board > table tr > td.right
@@ -451,16 +471,57 @@ h3.hidden
 
 #content-board > table td div.header
 {
-  color: #8C8C8C;
+  width: 100%;
+}
+
+#content-board > table td div.header .title
+{
+  float: left;
+  width: 87%;
+}
+
+#content-board > table td div.header .btn-cont
+{
+  float: right;
+}
+
+#content-board > table td div.header .btn-cont .btn-export
+{
+  padding: 0px;
+}
+
+#content-board > table td div.header .btn-cont img
+{
+  width: 24px;
+}
+
+#content-board > table td div.subheader
+{
   font-size: 13px;
+  color: #8C8C8C;
+  font-size: 12px;
   font-style: italic;
-  margin-bottom: 9px;
+  margin-bottom: 2px;
+  width: 100%;
 }
 
 #content-board > table td div.body
 {
   width: 100%;
-/*        text-align: justify;*/
+  font-size: 13px;
+  margin-bottom: 5px;
+}
+
+#content-board .description
+{
+  text-align: justify;
+  padding: 0px 15px 0px 5px;
+  font-size: 13px;
+}
+
+#content-board .description p
+{
+
 }
 
 #partners
@@ -488,7 +549,7 @@ h3.hidden
   padding-top: 20px;
 }
 
-#footer .r1 .c1, #footer .r1 .c2, #footer .r1 .c3, #footer .r1 .c4 
+#footer .r1 .c1, #footer .r1 .c2, #footer .r1 .c3, #footer .r1 .c4
 {
   width: 144px;
 }
@@ -524,9 +585,14 @@ h3.hidden
   color: #494949;
 }
 
+#footer .r1 .c4 > *
+{
+  margin-bottom: 13px;
+}
+
 #footer .menu
 {
-  font-size: 13px;
+  font-size: 12px;
   width: 100%;
 }
 
@@ -540,8 +606,7 @@ h3.hidden
 {
   display: block;
   border-bottom: 1px solid #939393;
-  padding-bottom: 9px;
-  padding-top: 9px;
+  padding: 6px 0px;
   color: #3d3d3d;
 }
 
@@ -569,7 +634,7 @@ h3.hidden
 #footer > .r3
 {
   color: #fff;
-  font-size: 13px;
+  font-size: 12px;
   font-family: Arial, Sans-serif;
   text-shadow: 1px 1px rgba(0, 0, 0, .2);
   padding: 9px 0px 10px;
@@ -578,7 +643,6 @@ h3.hidden
 #footer .r3 a
 {
   color: #fff;
-  font-size: 13px;
   text-decoration: none;
 }
 
