--- a/app/assets/stylesheets/german_week.css
+++ b/app/assets/stylesheets/german_week.css
@@ -13,4 +13,5 @@ ul#search_results h3 > a:visited { color: #3F448C; }
 .pagination .disabled,.pagination .current{border:1px solid #ddd;border-left:0;line-height:34px;padding:0 14px;float:left;}
 .search_results_sub_section span { color: #0033FF; } /* color the headings of the sub sections */
 
-#img_ambassador{float: right; margin: 0 10px 10px 10px;}
+#img_ambassador{ float: right; margin: 0 10px 5px 15px; }
+#img_signature { margin-left: 6px; }
