--- a/app/views/shared/_event_list.html.erb
+++ b/app/views/shared/_event_list.html.erb
@@ -16,22 +16,25 @@
    <% end %>
 
       <td<%= attr %>>
-        <div class="header">
+        <div class="header clear">
+          <div class="title">
+            <%= link_to event.title, event_path(event) %>
+          </div>
+          <div class="btn-cont">
+            <%= link_to(image_tag("Calendar.png", :alt => t('app.buttons.ics')), events_exportICS_path(:type => "event", :typespec => event.id), :class => "btn-export", :title => t('app.buttons.ics')) %>
+          </div>
+        </div>
+        <div class="subheader">
           <%= pretty_time(event.start, event.end) %>
         </div>
         <div class="body">
-          <%= link_to event.title, event_path(event) %>
-          <br />
 					<% if event.event_address.nil? %>
-						<br />
 					<% else %>
 						<%= event.event_address %>
 					<% end %>
-        </div>
+				</div>
 				<% if is_html %>
 					<div>
-						<%= link_to(image_tag("Calendar.png", :alt => t('app.buttons.ics')), events_exportICS_path(:type => "event", :typespec => event.id), :class => "btn-export", :title => t('app.buttons.ics')) %>
-					
 					<% if user_signed_in? %>
 						      <%= link_to t('app.buttons.edit'), edit_event_path(event), :class => 'btn btn-mini' %>
 						      <%= link_to t('app.buttons.delete'), event_path(event), :method => :delete, :confirm => t('app.msgs.delete_confirm'), :class => 'btn btn-mini btn-danger' %>
