--- a/app/assets/stylesheets/application.new.css.erb
+++ b/app/assets/stylesheets/application.new.css.erb
@@ -614,7 +614,7 @@ h3.hidden
 {
   color: #202020;
   cursor: pointer;
-  text-decoration: underline;
+  text-decoration: none;
 	font-weight: bold;
 	background-color: transparent;
 }
