--- a/app/assets/stylesheets/va_slider.css.erb
+++ b/app/assets/stylesheets/va_slider.css.erb
@@ -48,6 +48,11 @@
   padding-top: 3px;
 }
 
+.slider .container > .slide img
+{
+  width: 100%;
+}
+
 .slider .container > .slide, .slider .container .group
 {
   position: absolute;
