--- a/app/assets/stylesheets/application.new.css.erb
+++ b/app/assets/stylesheets/application.new.css.erb
@@ -153,7 +153,7 @@ td { vertical-align: top !important; }
   color: #2f2f2f;
   font-weight: bold;
   font-size: 13px;
-  width: 175px;
+  /*width: 175px;*/
   display: block;
   text-align: left;
   float: left;
