--- a/app/views/layouts/pdf.html.erb
+++ b/app/views/layouts/pdf.html.erb
@@ -5,7 +5,7 @@
 	<%= include_gon %>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <!--[if IE 6]><%= stylesheet_link_tag 'ie6' %><![endif]-->
-  <!--[if IE 7]><%= stylesheet_link_tag 'ie7' %><![endif]-->  
+  <!--[if IE 7]><%= stylesheet_link_tag 'ie7' %><![endif]-->
   <%= csrf_meta_tags %>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 </head>
@@ -16,7 +16,7 @@
       <div id="header" class="clear">
 
         <div class="c1 def-font">
-          <%= image_tag "#{@s3_url}/pdf/logo-german-week.png" %>
+          <%= image_tag "#{request.protocol + request.host}/pdf/logo-german-week.png" %>
           <div class="logo-text def-font">
 						<%= "#{t('layouts.application.logo_text')}" %>
 						<br />
@@ -27,7 +27,7 @@
         <div class="c2">
 
           <div class="logo">
-            <%= image_tag "#{@s3_url}/pdf/other-logo.png"%>
+            <%= image_tag "#{request.protocol + request.host}/pdf/other-logo.png"%>
           </div>
 
         </div><!--#header > .c2-->
