fix url to pdf images

--- a/app/views/layouts/pdf.html.erb
+++ b/app/views/layouts/pdf.html.erb
@@ -16,7 +16,7 @@
       <div id="header" class="clear">
 
         <div class="c1 def-font">
-          <%= image_tag "#{request.protocol + request.host}/pdf/logo-german-week.png" %>
+          <%= image_tag "#{request.protocol + request.host}/system/pdf/logo-german-week.png" %>
           <div class="logo-text def-font">
 						<%= "#{t('layouts.application.logo_text')}" %>
 						<br />
@@ -27,7 +27,7 @@
         <div class="c2">
 
           <div class="logo">
-            <%= image_tag "#{request.protocol + request.host}/pdf/other-logo.png"%>
+            <%= image_tag "#{request.protocol + request.host}/system/pdf/other-logo.png"%>
           </div>
 
         </div><!--#header > .c2-->
